# lxqt-menu-data

./: CHANGELOG  CMakeLists.txt  LICENSE  README.md
lxqt-menu-data/: CMakeLists.txt  lxqt-applications-only.menu
lxqt-menu-data/desktop-directories/: lxqt-other.directory.in
menu/: CMakeLists.txt  lxqt-applications-compact.menu  lxqt-applications-fancy.menu  lxqt-applications-fm.menu  lxqt-applications-simple.menu  lxqt-applications.menu  lxqt-config.menu  lxqt-fancy-applications.menu  lxqt-panel-applications.menu
menu/desktop-directories/: lxqt-audio-video.directory.in  lxqt-education-science.directory.in  lxqt-internet-and-network.directory.in  lxqt-look-and-feel.directory.in  lxqt-menu-system.directory.in  lxqt-network.directory.in  lxqt-personal.directory.in  lxqt-settings-system.directory.in  lxqt-utility.directory.in
menu/translations/: lxqt-education-science.directory.yaml  lxqt-education-science_ar.directory.yaml  lxqt-education-science_bg.directory.yaml  lxqt-education-science_cs.directory.yaml  lxqt-education-science_da.directory.yaml  lxqt-education-science_de.directory.yaml  lxqt-education-science_el.directory.yaml  lxqt-education-science_es.directory.yaml  lxqt-education-science_et.directory.yaml  lxqt-education-science_fi.directory.yaml  lxqt-education-science_fr.directory.yaml  lxqt-education-science_he.directory.yaml  lxqt-education-science_hr.directory.yaml  lxqt-education-science_hu.directory.yaml  lxqt-education-science_it.directory.yaml  lxqt-education-science_ja.directory.yaml  lxqt-education-science_ka.directory.yaml  lxqt-education-science_kab.directory.yaml  lxqt-education-science_kk.directory.yaml  lxqt-education-science_ko.directory.yaml  lxqt-education-science_lg.directory.yaml  lxqt-education-science_lt.directory.yaml  lxqt-education-science_nb_NO.directory.yaml  lxqt-education-science_nl.directory.yaml  lxqt-education-science_oc.directory.yaml  lxqt-education-science_pa.directory.yaml  lxqt-education-science_pl.directory.yaml  lxqt-education-science_pt.directory.yaml  lxqt-education-science_pt_BR.directory.yaml  lxqt-education-science_ru.directory.yaml  lxqt-education-science_sv.directory.yaml  lxqt-education-science_tr.directory.yaml  lxqt-education-science_uk.directory.yaml  lxqt-education-science_zh_CN.directory.yaml  lxqt-education-science_zh_TW.directory.yaml  lxqt-leave_da.directory.yaml  lxqt-leave_ka.directory.yaml  lxqt-leave_kab.directory.yaml  lxqt-leave_kk.directory.yaml  lxqt-leave_lg.directory.yaml  (+39 more)
